# reportmaker

./: .env  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
src/basic_templates/: document_info.html  patient_info.html  relative_info.html
src/core/: config.py  gunicorn.conf.py  main.py
src/dal/: dal.py  documents.py  patients.py  relationships.py  relatives.py  repositories.py  templates.py
src/db/: connection.py
src/db/alembic/: env.py
src/db/alembic/versions/: 2023-08-13_8bff9aa1de04_templates.py  2023-08-14_41249e8263b9_122.py  2023-08-15_ed4cc035c329_.py  2023-08-18_1fa78a8422c8_.py  2023-08-18_68d2ebd3afff_.py
src/db/models/: base.py  tables.py
src/db/tables/: __init__.py  base.py  documents.py  operators.py  patients.py  relatives.py  templates.py
src/repositories/: base.py  patients.py  templates.py
src/routers/: __init__.py  documents.py  patients.py  relatives.py  reports.py  templates.py
src/schemas/: base.py  document.py  patient.py  relative.py  template.py
src/serv/: services.py
src/services/: base.py  patients.py  relatives.py  reports.py  services.py  templates.py
src/tests/: conftest.py  test_documents.py  test_patients.py  test_relatives.py
src/tests/data/: documents.py  patients.py  relatives.py
src/utils/: custom_types.py  database.py  errors.py  other.py
