[tool.poetry]
name = "reportmaker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.6"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
alembic = "^1.10.2"
asyncpg = "^0.27.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
httpx = "^0.23.3"
loguru = "^0.7.0"
python-dateutil = "^2.8.2"
pyhumps = "^3.8.0"
urllib3 = "^1"
cryptocode = "^0.1"
psycopg2 = "^2.9.6"
isodate = "^0.6.1"
aiocache = "^0.12.1"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
pdfkit = "^1.0.0"
temp = "^2020.7.2"
strenum = "^0.4.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | frontend
  | libs
)/
'''

[tool.pytest.ini_options]
console_output_style = "progress"
asyncio_mode = "auto"


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
#fixable = ["A", "B", "C", "D", "E", "F", "..."]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/db/alembic",
    "src/tests/conftest.py",
    "libs"
]

line-length = 79

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10